# brezn

./: .gitignore  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml
brezn/: __init__.py  cli.py  config.py  environment.py  files.py  job.py  main.py
brezn/cli/: main.py  run.py
brezn/launchers/: __init__.py  launcher.py  local.py  slurm.py
brezn/templates/: __init__.py  job.j2.sh
brezn/templates/local/: batch.j2.sh
brezn/templates/slurm/: sbatch.j2.sh  srun.j2.sh
