[build-system]
requires = ["flit_core <4"]
build-backend = "flit_core.buildapi"

[project]
name = "brezn"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">= 3.6"
license = {file = "LICENSE"}
authors = [{name = "Marten Lienen", email = "marten.lienen@gmail.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python"
]
dependencies = [
  "click",
  "gitignorant",
]

[project.scripts]
brezn = "brezn.main:main"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
homepage = "https://github.com/martenlienen/brezn"

[tool.flit.sdist]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
